<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:gravity="center"
        android:paddingBottom="60dp"
        android:textSize="30sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="28sp"
                android:padding="8dp"
                android:text="@string/su_new_password"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/su_password_hint"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:id="@+id/new_password"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="28sp"
                android:padding="8dp"
                android:text="@string/su_confirm_new_password"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/su_confirm_password_hint"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:id="@+id/confirm_new_password"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_password_btn"
                android:layout_gravity="center_horizontal"
                android:paddingTop="8dp"
                android:textSize="24sp"
                android:id="@+id/done_btn"/>
        </LinearLayout>
    </ScrollView>
</android.widget.LinearLayout>
