<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/edit_profile"
                android:textSize="36sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:src="@drawable/editprof"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/su_full_name"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:hint="@string/su_full_name_hint"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="@string/su_email"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:hint="@string/su_email_hint"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="@string/su_password"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:hint="@string/su_password_hint"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="@string/su_race"
                android:textSize="28sp" />

            <Spinner
                android:id="@+id/race"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/races"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">
            </Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="@string/su_weight"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:hint="@string/su_weight_hint"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="@string/su_height"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/height"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:hint="@string/su_height_hint"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="@string/su_age"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:hint="@string/su_age_hint"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="@string/su_gender"
                android:textSize="28sp" />

            <RadioGroup
                android:id="@+id/gender_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_male" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_female" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="@string/su_smoke_hist"
                android:textSize="28sp" />

            <RadioGroup
                android:id="@+id/smoke_hist_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <RadioButton
                    android:id="@+id/smoke_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_yes" />

                <RadioButton
                    android:id="@+id/smoke_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_no" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="@string/su_diabetes_hist"
                android:textSize="28sp" />

            <RadioGroup
                android:id="@+id/diabetes_hist_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <RadioButton
                    android:id="@+id/diabetes_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_yes" />

                <RadioButton
                    android:id="@+id/diabetes_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_no" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="@string/su_hypertension_hist"
                android:textSize="28sp" />

            <RadioGroup
                android:id="@+id/hypertension_hist_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <RadioButton
                    android:id="@+id/hypertension_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_yes" />

                <RadioButton
                    android:id="@+id/hypertension_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_no" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="@string/su_chronic_kidney_hist"
                android:textSize="28sp" />

            <RadioGroup
                android:id="@+id/chronic_kidney_hist_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <RadioButton
                    android:id="@+id/chronic_kidney_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_yes" />

                <RadioButton
                    android:id="@+id/chronic_kidney_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_no" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="@string/su_adrenal_disorder_hist"
                android:textSize="28sp" />

            <RadioGroup
                android:id="@+id/adrenal_disorder_hist_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <RadioButton
                    android:id="@+id/adrenal_disorder_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_yes" />

                <RadioButton
                    android:id="@+id/adrenal_disorder_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_no" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="@string/su_thyroid_disorder_hist"
                android:textSize="28sp" />

            <RadioGroup
                android:id="@+id/thyroid_hist_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <RadioButton
                    android:id="@+id/thyroid_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_yes" />

                <RadioButton
                    android:id="@+id/thyroid_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_no" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="@string/su_birth_control"
                android:textSize="28sp" />

            <RadioGroup
                android:id="@+id/birth_control_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <RadioButton
                    android:id="@+id/birth_control_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_yes" />

                <RadioButton
                    android:id="@+id/birth_control_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_no" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="@string/su_activity_level"
                android:textSize="28sp" />

            <RadioGroup
                android:id="@+id/activity_lvl_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <RadioButton
                    android:id="@+id/activity_lvl_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_yes" />

                <RadioButton
                    android:id="@+id/activity_lvl_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_no" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="@string/su_sleep_apnea_hist"
                android:textSize="28sp" />

            <RadioGroup
                android:id="@+id/sleep_apnea_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <RadioButton
                    android:id="@+id/sleep_apnea_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_yes" />

                <RadioButton
                    android:id="@+id/sleep_apnea_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_no" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="@string/su_pregnant"
                android:textSize="28sp" />

            <RadioGroup
                android:id="@+id/pregnant_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <RadioButton
                    android:id="@+id/pregnant_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_yes" />

                <RadioButton
                    android:id="@+id/pregnant_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_no" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="@string/su_alcohol_consumption"
                android:textSize="28sp" />

            <RadioGroup
                android:id="@+id/alcohol_consump_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <RadioButton
                    android:id="@+id/alcohol_consump_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_yes" />

                <RadioButton
                    android:id="@+id/alcohol_consump_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_no" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="@string/su_sleep_duration"
                android:textSize="28sp" />

            <RadioGroup
                android:id="@+id/sleep_duration_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <RadioButton
                    android:id="@+id/sleep_duration_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_yes" />

                <RadioButton
                    android:id="@+id/sleep_duration_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_no" />
            </RadioGroup>


            <Button
                android:id="@+id/save_changes_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/save_changes"
                android:textSize="24sp" />
        </LinearLayout>


    </ScrollView>

</android.widget.LinearLayout>
