<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/smartheart"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:layout_gravity="center_horizontal"
            android:paddingTop="8dp"
            android:textSize="24sp"
            android:id="@+id/signup_btn"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center_horizontal"
            android:textSize="24sp"
            android:id="@+id/login_btn"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="14dp"
            android:text="@string/forgot_password"
            android:textSize="12sp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:id="@+id/forgot_password"
            />

</android.widget.LinearLayout>

