<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="28sp"
                android:padding="8dp"
                android:gravity="center"
                android:text="@string/hello_name"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <Space
                android:layout_width="1dp"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:padding="8dp"
                android:gravity="start"
                android:text="@string/display_weight"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:padding="8dp"
                android:gravity="start"
                android:text="@string/display_height"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:padding="8dp"
                android:gravity="start"
                android:text="@string/display_hypertension_risk"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:padding="8dp"
                android:gravity="start"
                android:text="@string/stress_bar"/>
            <ProgressBar
                android:id="@+id/simpleProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:progress="50"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/hrchart"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/sleepchart"/>
        </LinearLayout>
    </ScrollView>

</android.widget.LinearLayout>
