<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/enter_code"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textColor="#FF416C"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/githublogosample"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:hint="@string/su_enter_code_hint"
                android:padding="10dp"
                android:textStyle="italic"
                android:textAlignment="center"
                android:id="@+id/enter_code"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_edit_text"
                android:textColorHint="#ffff"
                android:alpha=".75"
                android:inputType="number"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_btn"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:id="@+id/enter_btn"
                android:background="@drawable/button_rounded"
                android:textColor="#ffff"
                android:textStyle="bold"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="14dp"
                android:textSize="12sp"
                android:text="@string/resend_prompt"
                android:textColor="#FF416C"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:layout_gravity="center"
                android:id="@+id/resend_code_btn"/>
        </LinearLayout>
    </ScrollView>
</android.widget.LinearLayout>